src/test/ui/proc-macro/attribute-after-derive-feature-gate.stderr
error[E0658]: macro attributes in `#[derive]` output are unstable
  --> $DIR/attribute-after-derive-feature-gate.rs:11:3
   |
LL | #[empty_attr]
   |   ^^^^^^^^^^
   |
   = note: see issue #81119 <https://github.com/rust-lang/rust/issues/81119> for more information
   = help: add `#![feature(macro_attributes_in_derive_output)]` to the crate attributes to enable

error[E0658]: macro attributes in `#[derive]` output are unstable
  --> $DIR/attribute-after-derive-feature-gate.rs:18:3
   |
LL | #[empty_attr]
   |   ^^^^^^^^^^
   |
   = note: see issue #81119 <https://github.com/rust-lang/rust/issues/81119> for more information
   = help: add `#![feature(macro_attributes_in_derive_output)]` to the crate attributes to enable

error[E0658]: macro attributes in `#[derive]` output are unstable
  --> $DIR/attribute-after-derive-feature-gate.rs:25:19
   |
LL |     field: [u8; #[identity_attr] 10],
   |                   ^^^^^^^^^^^^^
   |
   = note: see issue #81119 <https://github.com/rust-lang/rust/issues/81119> for more information
   = help: add `#![feature(macro_attributes_in_derive_output)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
